--- a/kraken/Cargo.toml
+++ b/kraken/Cargo.toml
@@ -37,6 +37,9 @@ actix-files = { version = "~0.6", optional = true }
 # Webauthn library
 webauthn-rs = { version = "~0.5", features = ["danger-allow-state-serialisation"] }
 
+# SSO
+openidconnect = { version = "~4", features = ["accept-rfc3339-timestamps", "timing-resistant-secret-traits"], optional = true }
+
 # openapi swagger
 utoipa = { version = "~4", features = ["actix_extras", "repr", "chrono", "uuid", "openapi_extensions", "preserve_order"] }
 # openapi swagger boilerplat generation
@@ -136,4 +139,5 @@ bin = [
     "dep:rorm",
     "dep:rcgen",
     "dep:image",
+    "dep:openidconnect"
 ]
